# Persona

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  port.rs  sqlite.rs
crates/database/tests/: sqlite_store.rs
crates/persona-core/: Cargo.toml
crates/persona-core/src/: error.rs  identity.rs  lib.rs  lifecycle.rs
crates/persona-core/tests/: contracts.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  dispatcher.rs  lib.rs  logging.rs  runtime.rs
crates/runtime/tests/: config.rs  dispatcher.rs  failure_cleanup.rs  lifecycle.rs  logging.rs
docs/: AI_SERVICE.md  ARCHITECTURE.md  DATABASE.md  IPC.md  MEMORY.md  PLAN.md  PLUGIN.md  README.md  README_CN.md  ROADMAP.md  RUNTIME.md  USER_MODEL.md
docs/adr/: 0001-service-interface.md
docs/superpowers/plans/: 2026-07-12-phase-1-runtime-foundation.md
docs/superpowers/specs/: 2026-07-12-phase-1-runtime-foundation-design.md
