[package]
name = "persona-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
persona-database = { path = "../database" }
persona-core = { path = "../persona-core" }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
